fix_add_mapper_xml